vlib/v/checker/tests/res_use_outside_defer.vv
fn test() string {
	println($res())
	return 'test'
}
